# dev-reporter

./: .gitignore  main.py  pyproject.toml
agents/: base.py  checkout.py  code_stats.py  composer_stats.py  dependabot_alert_model.py  github_stats.py  laravel_stats.py  project_type.py  reporter.py
models/: repo_stats.py
templates/: repo_appendix.md.j2  report.md.j2
