[project]
name = "dev-reporter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gitpython>=3.1.44",
    "jinja2>=3.1.6",
    "litellm>=1.66.0",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "pydantic>=2.11.3",
    "pygithub>=2.6.1",
    "python-dotenv>=1.1.0",
    "seaborn>=0.13.2",
]
